2006-03-10  Alan Coopersmith  <alan.coopersmith@sun.com>

	* configure.ac: 
	* include/dix-config.h.in: 
	Add HAS_MMAP for Xvfb

	* hw/vfb/InitOutput.c (ddxProcessArgument): 
	Fix Xvfb option parsing to exit on bad arguments, not just issue
	error messages and continue on.  (Coverity #492)
	
2006-03-10  Alan Coopersmith  <alan.coopersmith@sun.com>       

	* hw/xfree86/utils/xorgcfg/options.c: 
	Pass sizeof the correct buffer to XmuSnprintf. (Coverity #489)

2006-03-10  Eric Anholt  <anholt@FreeBSD.org>

	* hw/kdrive/ephyr/ephyr.c: (ephyrMapFramebuffer):
	* hw/kdrive/ephyr/ephyr_draw.c: (ephyrPrepareComposite),
	(ephyrDrawInit):
	* hw/kdrive/ephyr/hostx.c: (hostx_screen_init):
	* hw/kdrive/ephyr/hostx.h:
	If fakexa is enabled, create a larger buffer in the Ximage, but keep
	the same width/height for front-buffer drawing.  The fakexa code then
	uses this extra space for offscreen pixmaps.  Note that this tones down
	the absurdity of fakexa's offscreen pixmap alignment requirements (odd
	alignment is too weird, so stick with "24", which is still strange but
	exists out there).  It also fixes a couple of bugs in the fakexa
	implementation revealed by using offscreen pixmaps.

2006-03-10  Eric Anholt  <anholt@FreeBSD.org>

	* exa/exa.c: (exaPrepareAccess), (exaFinishAccess):
	Move the exaDrawableDirty in exaPrepareAccess to exaFinishAccess, which
	is after the drawing is done.  Previously, a failed PrepareAccess could
	have migrated and cleared the dirty flag before the damage was ever
	done.

2006-03-10  Eric Anholt  <anholt@FreeBSD.org>

	* hw/xfree86/vbe/vbe.c: (vbeProbeDDC):
	Coverity #1011: Remove a useless NULL check on a pVbe that had
	been dereferenced many times before.

2006-03-09  Eric Anholt  <anholt@FreeBSD.org>

	* hw/xfree86/int10/generic.c: (xf86ExtendedInitInt10):
	Coverity #857: Fix resource leak in error path by freeing earlier.

2006-03-09  Eric Anholt  <anholt@FreeBSD.org>

	* hw/xfree86/parser/Keyboard.c: (xf86parseKeyboardSection):